Many lore, and book changes

--- a/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
+++ b/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
@@ -2,5 +2,8 @@
   "language.name": "English",
   "language.region": "United States",
   "language.code": "en_us",
+
+  "tinkery.attributes.combo.numeral": "%s %s",
+  "tinkery.attributes.combo.amount": "%s  %s / %s"
   
 }
