All axe recipes. Added PreventLayersFor specific attribute

--- a/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
+++ b/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
@@ -13,6 +13,14 @@
   "item.tinkery.acacia_pickaxe": "Acacia Pickaxe",
   "item.tinkery.dark_oak_pickaxe": "Dark Oak Pickaxe",
   "item.tinkery.blackstone_pickaxe": "Blackstone Pickaxe",
+  
+  "item.tinkery.oak_axe": "Oak Axe",
+  "item.tinkery.spruce_axe": "Spruce Axe",
+  "item.tinkery.birch_axe": "Birch Axe",
+  "item.tinkery.jungle_axe": "Jungle Axe",
+  "item.tinkery.acacia_axe": "Acacia Axe",
+  "item.tinkery.dark_oak_axe": "Dark Oak Axe",
+  "item.tinkery.blackstone_axe": "Blackstone Axe",
 
   "item.tinkery.oak_sword": "Oak Sword",
   "item.tinkery.spruce_sword": "Spruce Sword",
