All shovel recipes

--- a/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
+++ b/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
@@ -21,6 +21,14 @@
   "item.tinkery.acacia_axe": "Acacia Axe",
   "item.tinkery.dark_oak_axe": "Dark Oak Axe",
   "item.tinkery.blackstone_axe": "Blackstone Axe",
+  
+  "item.tinkery.oak_shovel": "Oak Shovel",
+  "item.tinkery.spruce_shovel": "Spruce Shovel",
+  "item.tinkery.birch_shovel": "Birch Shovel",
+  "item.tinkery.jungle_shovel": "Jungle Shovel",
+  "item.tinkery.acacia_shovel": "Acacia Shovel",
+  "item.tinkery.dark_oak_shovel": "Dark Oak Shovel",
+  "item.tinkery.blackstone_shovel": "Blackstone Shovel",
 
   "item.tinkery.oak_sword": "Oak Sword",
   "item.tinkery.spruce_sword": "Spruce Sword",
