All hoe recipes

--- a/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
+++ b/.resourcepack/Lapis Resources 2/assets/tinkery/lang/en_us.json
@@ -29,6 +29,14 @@
   "item.tinkery.acacia_shovel": "Acacia Shovel",
   "item.tinkery.dark_oak_shovel": "Dark Oak Shovel",
   "item.tinkery.blackstone_shovel": "Blackstone Shovel",
+  
+  "item.tinkery.oak_hoe": "Oak Hoe",
+  "item.tinkery.spruce_hoe": "Spruce Hoe",
+  "item.tinkery.birch_hoe": "Birch Hoe",
+  "item.tinkery.jungle_hoe": "Jungle Hoe",
+  "item.tinkery.acacia_hoe": "Acacia Hoe",
+  "item.tinkery.dark_oak_hoe": "Dark Oak Hoe",
+  "item.tinkery.blackstone_hoe": "Blackstone Hoe",
 
   "item.tinkery.oak_sword": "Oak Sword",
   "item.tinkery.spruce_sword": "Spruce Sword",
